<?xml version="1.0"?>
<package>
  <name>zaru_preg</name>
  <version>0.0.0</version>
  <description>The zaru_preg package - implementing p-regulator for track allignment</description>

  <maintainer email="michael.rutzen@fu-berlin.de">Michael Rutzen</maintainer>
  <maintainer email="manarzaboub@zedat.fu-berlin.de">Manar Zaboub</maintainer>
  <maintainer email="daluege@gmail.com">Filip Dalüge</maintainer>

  <license>GPLv3</license>

  <author email="michael.rutzen@fu-berlin.de">Michael Rutzen</author>
  <author email="manarzaboub@zedat.fu-berlin.de">Manar Zaboub</author>
  <author email="daluege@gmail.com">Filip Dalüge</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
